; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_tehuti.c_bdx_get_drvinfo.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_tehuti.c_bdx_get_drvinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ethtool_drvinfo = type { i64, i64, i64, i32, i32, i32, i32, i32 }
%struct.bdx_priv = type { i64, i32 }

@BDX_DRV_NAME = common dso_local global i8* null, align 8
@BDX_DRV_VERSION = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [4 x i8] c"N/A\00", align 1
@bdx_stat_names = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, %struct.ethtool_drvinfo*)* @bdx_get_drvinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bdx_get_drvinfo(%struct.net_device* %0, %struct.ethtool_drvinfo* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.ethtool_drvinfo*, align 8
  %5 = alloca %struct.bdx_priv*, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store %struct.ethtool_drvinfo* %1, %struct.ethtool_drvinfo** %4, align 8
  %6 = load %struct.net_device*, %struct.net_device** %3, align 8
  %7 = call %struct.bdx_priv* @netdev_priv(%struct.net_device* %6)
  store %struct.bdx_priv* %7, %struct.bdx_priv** %5, align 8
  %8 = load %struct.ethtool_drvinfo*, %struct.ethtool_drvinfo** %4, align 8
  %9 = getelementptr inbounds %struct.ethtool_drvinfo, %struct.ethtool_drvinfo* %8, i32 0, i32 7
  %10 = load i32, i32* %9, align 8
  %11 = load i8*, i8** @BDX_DRV_NAME, align 8
  %12 = call i32 @strlcat(i32 %10, i8* %11, i32 4)
  %13 = load %struct.ethtool_drvinfo*, %struct.ethtool_drvinfo** %4, align 8
  %14 = getelementptr inbounds %struct.ethtool_drvinfo, %struct.ethtool_drvinfo* %13, i32 0, i32 6
  %15 = load i32, i32* %14, align 4
  %16 = load i8*, i8** @BDX_DRV_VERSION, align 8
  %17 = call i32 @strlcat(i32 %15, i8* %16, i32 4)
  %18 = load %struct.ethtool_drvinfo*, %struct.ethtool_drvinfo** %4, align 8
  %19 = getelementptr inbounds %struct.ethtool_drvinfo, %struct.ethtool_drvinfo* %18, i32 0, i32 5
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @strlcat(i32 %20, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 4)
  %22 = load %struct.ethtool_drvinfo*, %struct.ethtool_drvinfo** %4, align 8
  %23 = getelementptr inbounds %struct.ethtool_drvinfo, %struct.ethtool_drvinfo* %22, i32 0, i32 4
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.bdx_priv*, %struct.bdx_priv** %5, align 8
  %26 = getelementptr inbounds %struct.bdx_priv, %struct.bdx_priv* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 8
  %28 = call i8* @pci_name(i32 %27)
  %29 = call i32 @strlcat(i32 %24, i8* %28, i32 4)
  %30 = load %struct.bdx_priv*, %struct.bdx_priv** %5, align 8
  %31 = getelementptr inbounds %struct.bdx_priv, %struct.bdx_priv* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %2
  %35 = load i32, i32* @bdx_stat_names, align 4
  %36 = call i32 @ARRAY_SIZE(i32 %35)
  br label %38

37:                                               ; preds = %2
  br label %38

38:                                               ; preds = %37, %34
  %39 = phi i32 [ %36, %34 ], [ 0, %37 ]
  %40 = load %struct.ethtool_drvinfo*, %struct.ethtool_drvinfo** %4, align 8
  %41 = getelementptr inbounds %struct.ethtool_drvinfo, %struct.ethtool_drvinfo* %40, i32 0, i32 3
  store i32 %39, i32* %41, align 8
  %42 = load %struct.ethtool_drvinfo*, %struct.ethtool_drvinfo** %4, align 8
  %43 = getelementptr inbounds %struct.ethtool_drvinfo, %struct.ethtool_drvinfo* %42, i32 0, i32 2
  store i64 0, i64* %43, align 8
  %44 = load %struct.ethtool_drvinfo*, %struct.ethtool_drvinfo** %4, align 8
  %45 = getelementptr inbounds %struct.ethtool_drvinfo, %struct.ethtool_drvinfo* %44, i32 0, i32 1
  store i64 0, i64* %45, align 8
  %46 = load %struct.ethtool_drvinfo*, %struct.ethtool_drvinfo** %4, align 8
  %47 = getelementptr inbounds %struct.ethtool_drvinfo, %struct.ethtool_drvinfo* %46, i32 0, i32 0
  store i64 0, i64* %47, align 8
  ret void
}

declare dso_local %struct.bdx_priv* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @strlcat(i32, i8*, i32) #1

declare dso_local i8* @pci_name(i32) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
